src/styles/scss/_items.scss
/* ... */
// Single select radio buttons, vertical
.its123-item-single-select-vertical,
.its123-item-multi-select-vertical {
  @extend .its123-alternate-background;

  .its123-option {
    margin-bottom: 10px;
  }
  input {
    margin-right: 5px;
  }
  &.its123-error {
    border: 1px solid $error-border-color;
    border-radius: $border-radius;
  }
}
// Single select for trivia (iq) questions
.its123-item-trivia {
  background-color: $item-bg-color-alternate;

  .its123-legend {
    font-size: 1.2 * $font-size-item;
  }
  .its123-counter {
    color: $color-primary;
  }
  .its123-trivia-question {
    color: $color-secondary;
    margin-bottom: 30px;
    font-size: 1.2 * $font-size-item;

    img {
      max-width: 100%;
    }
  }
  .its123-options {
    margin: 0 0 30px 30px;
  }
  .its123-option {
    margin-bottom: 10px;
  }
  .its123-option-radio {
    margin-right: 5px;
  }
  .its123-options-images .its123-option {
    display: inline-block;
    margin-right: 15px;
    label, img {
      vertical-align: middle;
    }
  }
  .its123-trivia-footer {
    display: flex;
    justify-content: space-around;
    align-items: baseline;
    flex-wrap: wrap;
  }
  .its123-trivia-footer div {
    flex: 1 1 auto;
    text-align: center;
    margin-bottom: 15px;
  }
  .its123-timer {
    color: $color-primary;
    font-size: 1.2 * $font-size-item;
  }
}

// Single select radio buttons, horizontal
.its123-item-single-select-horizontal-container {
  display: table;
  width:100%;

  .its123-item {
    display: table-row-group;
  }
  .its123-options {
    display: table-row;
  }
  .its123-option {
    display: table-cell;
    padding: 10px;
  }
  .its123-option:first-child {
    text-align: right;
    input {
      margin-left: 10px;
    }
  }
  .its123-option:last-child {
    text-align: left;
    input {
      margin-right: 10px;
    }
  }

  .its123-error .its123-option {
    border: 1px solid $error-border-color;

    &:first-child {
      border-right: 0;
    }
    &:last-child {
      border-left: 0;
    }
  }
}

// single select dropdown vertical
.its123-item-dropdown-vertical {
  @extend .its123-alternate-background;

  .its123-label {
    display: block;
    margin-bottom: 15px;
  }
  &.its123-error {
    border: 1px solid $error-border-color;
    border-radius: $border-radius;
  }
}

// single select dropdown horizontal
.its123-item-dropdown-horizontal, .its123-item-horizontal {

  @include media-breakpoint-up(md) {
    .its123-label {
      float: left;
      text-align: right;
      width: 180px;
      padding-top: 5px;
    }

    .its123-options, .its123-input {
      margin-left: 200px;
    }
  }
}

// Likert tables
.its123-likert {

  .its123-item {
    padding: 10px 10px 20px 10px;
    margin-bottom: 10px;
    min-height: 40px;

    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: flex-start;
    align-content: flex-start;

    @include media-breakpoint-up(md) {
      margin-bottom: 0;
      padding: 8px 0 8px 0;

      border: 0;
    }
  }

  .its123-counter {
    background-color: lighten($color-secondary, 60%);
    color: $color-secondary;
    border-radius: 7px;
    font-size: 12px;
    line-height: 19px;
    width: 30px;
    height: 18px;
    margin-right: 10px;
    float: left;
    display: inline-block;
    text-align: center;
    @include media-breakpoint-up(md) {
      margin-right: 10px;
    }
  }

  .its123-label {
    flex-grow: 1;
    display: block;
    flex-basis: 100%;
    margin-bottom: 20px;

    @include media-breakpoint-up(md) {
      flex-basis: 60%;
      margin-bottom: 0;
    }
    .its123-label-text {
      width: 80%;
      float: left;
    }
  }

  .its123-likert-label {
    display: block;
    margin-bottom: 8px;
    color: $color-secondary;

    @include media-breakpoint-up(md) {
      display: none;
    }
  }

  .its123-item:nth-child(10n+1) {
    @include media-breakpoint-up(md) {
      .its123-label {
        display: block;
        margin-top: 10px;
        padding-top: 10px;
        min-height: 50px;
        border-top: $item-border;
      }
    }
    .its123-likert-label {
      display: block;
    }
  }

  .its123-likert-option {
    width: 20px;
    padding: 0 10px;
    margin: 0 auto;
    text-align: center;

    flex-grow: 1;
  }

  .its123-radio {
    width: 1.2em;
    height: 1.2em;
  }
}
// Thumbs
.its123-thumbs-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;

  .its123-thumbs {
    flex-basis: 100%;
  }

  @include media-breakpoint-up(md) {
    .its123-thumbs {
      flex-basis: 35%;
    }
  }
}
/* ... */

